--- a/index.html
+++ b/index.html
@@ -1,11 +1,243 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>ロト7結果検索ツール</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ロト7結果検索</title>
+  <style>
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      padding: 20px;
+      background-color: #fff6f0;
+      color: #222;
+    }
+    h1 {
+      color: #d94f4f;
+    }
+    .filters {
+      background: #ffecec;
+      border: 1px solid #ffd4d4;
+      padding: 10px;
+      border-radius: 10px;
+      margin-bottom: 12px;
+    }
+    .scroll-container {
+      background: #ffffff;
+      border: 1px solid #ffd4d4;
+      border-radius: 8px;
+      max-height: 600px;
+      overflow-y: auto;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      min-width: 800px;
+    }
+    th, td {
+      border: 1px solid #ffc0c0;
+      padding: 6px;
+      text-align: center;
+      white-space: nowrap;
+    }
+    thead th {
+      background: #ffe0e0;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+    }
+    .scroll-button {
+      position: fixed;
+      right: 10px;
+      padding: 8px 12px;
+      font-size: 13px;
+      background: #ff8888;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      opacity: 0.9;
+    }
+    #scrollTopBtn { bottom: 70px; }
+    #scrollBottomBtn { bottom: 20px; }
+
+    button {
+      background: #ff8888;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 6px 12px;
+      font-size: 14px;
+    }
+    button:hover {
+      background-color: #cc6666;
+    }
+
+    .info-icon {
+      display: inline-block;
+      margin-left: 6px;
+      cursor: pointer;
+      font-size: 14px;
+      color: #e26580;
+      font-weight: normal;
+      user-select: none;
+    }
+
+    .popup {
+      display: none;
+      position: absolute;
+      background-color: #fff;
+      border: 1px solid #e26580;
+      padding: 6px;
+      font-size: 13px;
+      max-width: 220px;
+      box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+      z-index: 999;
+    }
+  </style>
 </head>
 <body>
   <h1>ロト7結果検索ツール</h1>
-  <p>このページはロト7の過去の抽選結果を検索できるツールです。</p>
+  <p>開催回・日付・抽選数字の特徴などで直感的に検索できます。</p>
+
+  <div class="filters">
+    <label>開催回 From: <input type="number" id="fromRound" min="1"></label>
+    <label>To: <input type="number" id="toRound" min="1"></label>
+    <label>開催日 From: <input type="date" id="fromDate"></label>
+    <label>To: <input type="date" id="toDate"></label>
+
+    <div>
+      <label><input type="checkbox" class="feature" value="連番"> 連番</label>
+      <span class="info-icon" onclick="showPopup(event, '連続した数字（例：24・25など）を含む構成です。')">ⓘ</span>
+
+      <label><input type="checkbox" class="feature" value="奇数多め"> 奇数多め</label>
+      <span class="info-icon" onclick="showPopup(event, '奇数が4個以上含まれる構成です。')">ⓘ</span>
+
+      <label><input type="checkbox" class="feature" value="偶数多め"> 偶数多め</label>
+      <span class="info-icon" onclick="showPopup(event, '偶数が4個以上含まれる構成です。')">ⓘ</span>
+
+      <label><input type="checkbox" class="feature" value="バランス型"> バランス型</label>
+      <span class="info-icon" onclick="showPopup(event, '奇数と偶数がほぼ均等に含まれる構成です。')">ⓘ</span>
+
+      <label><input type="checkbox" class="feature" value="下一桁かぶり"> 下一桁かぶり</label>
+      <span class="info-icon" onclick="showPopup(event, '同じ下一桁の数字が2個以上（例：11・21など）含まれる構成です。')">ⓘ</span>
+
+      <label><input type="checkbox" class="feature" value="合計小さめ"> 合計小さめ</label>
+      <span class="info-icon" onclick="showPopup(event, '本数字の合計が60未満の構成です。')">ⓘ</span>
+
+      <label><input type="checkbox" class="feature" value="合計大きめ"> 合計大きめ</label><span class="info-icon" onclick="showPopup(event, '6つの本数字の合計が 151超 の回です。')">ⓘ</span><label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label><span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
+    </div>
+    <button onclick="filterResults()">🔍 検索</button>
+  </div>
+
+  <div class="scroll-container" id="scrollContainer">
+    <table id="resultTable">
+      <thead>
+        <tr>
+          <th>開催回</th><th>日付</th><th>本数字</th><th>ボーナス</th><th>特徴</th>
+          <th>1等賞金</th><th>1等口数</th><th>2等賞金</th><th>2等口数</th>
+          <th>3等賞金</th><th>3等口数</th><th>4等賞金</th><th>4等口数</th><th>5等賞金</th><th>5等口数</th><th>キャリーオーバー</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <button class="scroll-button" id="scrollTopBtn" onclick="scrollTableToTop()">⬆ 最上段へ</button>
+  <button class="scroll-button" id="scrollBottomBtn" onclick="scrollTableToBottom()">⬇ 最下段へ</button>
+
+  <div id="popupBox" class="popup"></div>
+
+  <script>
+    let data = [];
+
+    async function loadData() {
+      const res = await fetch("loto7.json");
+      data = await res.json();
+      renderTable(data);
+    }
+
+    function formatYen(value) {
+  if (value === "" || value === null || value === undefined) return "0円"; if (isNaN(value)) return "-";
+
+      const intVal = parseInt(value);
+      if (isNaN(intVal)) return value;
+      return intVal.toLocaleString() + "円";
+    }
+
+    function renderTable(filteredData) {
+      const tbody = document.querySelector("#resultTable tbody");
+      tbody.innerHTML = "";
+      filteredData.forEach(item => {
+        const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"], item["第6数字"], item["第7数字"]].join("・");
+        const row = `
+          <tr>
+            <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${[item["BONUS数字1"], item["BONUS数字2"]].join("・")}</td><td>${item["特徴"]}</td>
+            <td title="${formatYen(item["1等賞金"])}">${formatYen(item["1等賞金"])}</td>
+            <td>${item["1等口数"]}</td><td title="${formatYen(item["2等賞金"])}">${formatYen(item["2等賞金"])}</td>
+            <td>${item["2等口数"]}</td><td title="${formatYen(item["3等賞金"])}">${formatYen(item["3等賞金"])}</td>
+            <td>${item["3等口数"]}</td><td title="${formatYen(item["4等賞金"])}">${formatYen(item["4等賞金"])}</td>
+            <td>${item["4等口数"]}</td>
+<td title="${formatYen(item["5等賞金"])}">${formatYen(item["5等賞金"])}</td>
+<td>${item["5等口数"] ? parseInt(item["5等口数"]).toLocaleString() : "–"}口</td>
+<td title="${formatYen(item["キャリーオーバー"])}">${formatYen(item["キャリーオーバー"])}</td>
+
+          </tr>`;
+        tbody.insertAdjacentHTML("beforeend", row);
+      });
+    }
+
+    function filterResults() {
+      const fromRound = parseInt(document.getElementById("fromRound").value) || 1;
+      const toRound = parseInt(document.getElementById("toRound").value) || 9999;
+      const fromDate = document.getElementById("fromDate").value;
+      const toDate = document.getElementById("toDate").value;
+      const checked = Array.from(document.querySelectorAll(".feature:checked")).map(el => el.value);
+
+      const filtered = data.filter(item => {
+        const round = parseInt(item["開催回"]);
+        const date = item["日付"];
+        const inRound = round >= fromRound && round <= toRound;
+        const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
+        const hasFeature = checked.length === 0 || checked.every(f => item["特徴"]?.includes(f));
+        return inRound && inDate && hasFeature;
+      });
+
+      renderTable(filtered);
+    }
+
+    function showPopup(event, text) {
+      const popup = document.getElementById("popupBox");
+      popup.textContent = text;
+      popup.style.display = "block";
+      popup.style.left = (event.pageX + 10) + "px";
+      popup.style.top = (event.pageY + 10) + "px";
+    }
+
+    function hidePopup() {
+      document.getElementById("popupBox").style.display = "none";
+    }
+
+    document.addEventListener("click", function(e) {
+      if (!e.target.classList.contains("info-icon")) {
+        hidePopup();
+      }
+    });
+
+    function scrollTableToTop() {
+      document.getElementById("scrollContainer").scrollTo({ top: 0, behavior: "smooth" });
+    }
+    function scrollTableToBottom() {
+      const container = document.getElementById("scrollContainer");
+      container.scrollTo({ top: container.scrollHeight, behavior: "smooth" });
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      loadData();
+      setTimeout(() => {
+        document.getElementById("scrollContainer").scrollTop = 0;
+      }, 150);
+    });
+  </script>
 </body>
 </html>
