--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ロト7結果検索</title>
+  <title>ロト7結果検索ツール</title>
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -61,26 +60,12 @@
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
 
-    button {
-      background: #ff8888;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      padding: 6px 12px;
-      font-size: 14px;
-    }
-    button:hover {
-      background-color: #cc6666;
-    }
-
     .info-icon {
       display: inline-block;
       margin-left: 6px;
       cursor: pointer;
       font-size: 14px;
       color: #e26580;
-      font-weight: normal;
-      user-select: none;
     }
 
     .popup {
@@ -105,27 +90,15 @@
     <label>To: <input type="number" id="toRound" min="1"></label>
     <label>開催日 From: <input type="date" id="fromDate"></label>
     <label>To: <input type="date" id="toDate"></label>
-
     <div>
       <label><input type="checkbox" class="feature" value="連番"> 連番</label>
-      <span class="info-icon" onclick="showPopup(event, '連続した数字（例：24・25など）を含む構成です。')">ⓘ</span>
-
       <label><input type="checkbox" class="feature" value="奇数多め"> 奇数多め</label>
-      <span class="info-icon" onclick="showPopup(event, '奇数が4個以上含まれる構成です。')">ⓘ</span>
-
       <label><input type="checkbox" class="feature" value="偶数多め"> 偶数多め</label>
-      <span class="info-icon" onclick="showPopup(event, '偶数が4個以上含まれる構成です。')">ⓘ</span>
-
       <label><input type="checkbox" class="feature" value="バランス型"> バランス型</label>
-      <span class="info-icon" onclick="showPopup(event, '奇数と偶数がほぼ均等に含まれる構成です。')">ⓘ</span>
-
       <label><input type="checkbox" class="feature" value="下一桁かぶり"> 下一桁かぶり</label>
-      <span class="info-icon" onclick="showPopup(event, '同じ下一桁の数字が2個以上（例：11・21など）含まれる構成です。')">ⓘ</span>
-
       <label><input type="checkbox" class="feature" value="合計小さめ"> 合計小さめ</label>
-      <span class="info-icon" onclick="showPopup(event, '本数字の合計が60未満の構成です。')">ⓘ</span>
-
-      <label><input type="checkbox" class="feature" value="合計大きめ"> 合計大きめ</label><span class="info-icon" onclick="showPopup(event, '6つの本数字の合計が 151超 の回です。')">ⓘ</span><label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label><span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="合計大きめ"> 合計大きめ</label>
+      <label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label>
     </div>
     <button onclick="filterResults()">🔍 検索</button>
   </div>
@@ -136,7 +109,8 @@
         <tr>
           <th>開催回</th><th>日付</th><th>本数字</th><th>ボーナス</th><th>特徴</th>
           <th>1等賞金</th><th>1等口数</th><th>2等賞金</th><th>2等口数</th>
-          <th>3等賞金</th><th>3等口数</th><th>4等賞金</th><th>4等口数</th><th>5等賞金</th><th>5等口数</th><th>キャリーオーバー</th>
+          <th>3等賞金</th><th>3等口数</th><th>4等賞金</th><th>4等口数</th>
+          <th>5等賞金</th><th>5等口数</th><th>6等賞金</th><th>6等口数</th><th>キャリーオーバー</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -145,7 +119,6 @@
 
   <button class="scroll-button" id="scrollTopBtn" onclick="scrollTableToTop()">⬆ 最上段へ</button>
   <button class="scroll-button" id="scrollBottomBtn" onclick="scrollTableToBottom()">⬇ 最下段へ</button>
-
   <div id="popupBox" class="popup"></div>
 
   <script>
@@ -158,8 +131,8 @@
     }
 
     function formatYen(value) {
-  if (value === "" || value === null || value === undefined) return "0円"; if (isNaN(value)) return "-";
-
+      if (value === "" || value === null || value === undefined) return "0円";
+      if (isNaN(value)) return "-";
       const intVal = parseInt(value);
       if (isNaN(intVal)) return value;
       return intVal.toLocaleString() + "円";
@@ -170,18 +143,17 @@
       tbody.innerHTML = "";
       filteredData.forEach(item => {
         const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"], item["第6数字"], item["第7数字"]].join("・");
+        const bonus = [item["BONUS数字1"], item["BONUS数字2"]].join("・");
         const row = `
           <tr>
-            <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${[item["BONUS数字1"], item["BONUS数字2"]].join("・")}</td><td>${item["特徴"]}</td>
+            <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${bonus}</td><td>${item["特徴"] || ""}</td>
             <td title="${formatYen(item["1等賞金"])}">${formatYen(item["1等賞金"])}</td>
             <td>${item["1等口数"]}</td><td title="${formatYen(item["2等賞金"])}">${formatYen(item["2等賞金"])}</td>
             <td>${item["2等口数"]}</td><td title="${formatYen(item["3等賞金"])}">${formatYen(item["3等賞金"])}</td>
             <td>${item["3等口数"]}</td><td title="${formatYen(item["4等賞金"])}">${formatYen(item["4等賞金"])}</td>
-            <td>${item["4等口数"]}</td>
-<td title="${formatYen(item["5等賞金"])}">${formatYen(item["5等賞金"])}</td>
-<td>${item["5等口数"] ? parseInt(item["5等口数"]).toLocaleString() : "–"}口</td>
-<td title="${formatYen(item["キャリーオーバー"])}">${formatYen(item["キャリーオーバー"])}</td>
-
+            <td>${item["4等口数"]}</td><td title="${formatYen(item["5等賞金"])}">${formatYen(item["5等賞金"])}</td>
+            <td>${item["5等口数"]}</td><td title="${formatYen(item["6等賞金"])}">${formatYen(item["6等賞金"])}</td>
+            <td>${item["6等口数"]}</td><td title="${formatYen(item["キャリーオーバー"])}">${formatYen(item["キャリーオーバー"])}</td>
           </tr>`;
         tbody.insertAdjacentHTML("beforeend", row);
       });
@@ -206,27 +178,10 @@
       renderTable(filtered);
     }
 
-    function showPopup(event, text) {
-      const popup = document.getElementById("popupBox");
-      popup.textContent = text;
-      popup.style.display = "block";
-      popup.style.left = (event.pageX + 10) + "px";
-      popup.style.top = (event.pageY + 10) + "px";
-    }
-
-    function hidePopup() {
-      document.getElementById("popupBox").style.display = "none";
-    }
-
-    document.addEventListener("click", function(e) {
-      if (!e.target.classList.contains("info-icon")) {
-        hidePopup();
-      }
-    });
-
     function scrollTableToTop() {
       document.getElementById("scrollContainer").scrollTo({ top: 0, behavior: "smooth" });
     }
+
     function scrollTableToBottom() {
       const container = document.getElementById("scrollContainer");
       container.scrollTo({ top: container.scrollHeight, behavior: "smooth" });
@@ -234,9 +189,6 @@
 
     document.addEventListener("DOMContentLoaded", () => {
       loadData();
-      setTimeout(() => {
-        document.getElementById("scrollContainer").scrollTop = 0;
-      }, 150);
     });
   </script>
 </body>
