--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
       background-color: #fff6f0;
       color: #222;
     }
-    h1 {
-      color: #d94f4f;
-    }
+    h1 { color: #d94f4f; }
     .filters {
       background: #ffecec;
       border: 1px solid #ffd4d4;
@@ -31,7 +29,7 @@
     table {
       border-collapse: collapse;
       width: 100%;
-      min-width: 800px;
+      min-width: 900px;
     }
     th, td {
       border: 1px solid #ffc0c0;
@@ -59,26 +57,6 @@
     }
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
-
-    .info-icon {
-      display: inline-block;
-      margin-left: 6px;
-      cursor: pointer;
-      font-size: 14px;
-      color: #e26580;
-    }
-
-    .popup {
-      display: none;
-      position: absolute;
-      background-color: #fff;
-      border: 1px solid #e26580;
-      padding: 6px;
-      font-size: 13px;
-      max-width: 220px;
-      box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
-      z-index: 999;
-    }
   </style>
 </head>
 <body>
@@ -90,16 +68,6 @@
     <label>To: <input type="number" id="toRound" min="1"></label>
     <label>開催日 From: <input type="date" id="fromDate"></label>
     <label>To: <input type="date" id="toDate"></label>
-    <div>
-      <label><input type="checkbox" class="feature" value="連番"> 連番</label>
-      <label><input type="checkbox" class="feature" value="奇数多め"> 奇数多め</label>
-      <label><input type="checkbox" class="feature" value="偶数多め"> 偶数多め</label>
-      <label><input type="checkbox" class="feature" value="バランス型"> バランス型</label>
-      <label><input type="checkbox" class="feature" value="下一桁かぶり"> 下一桁かぶり</label>
-      <label><input type="checkbox" class="feature" value="合計小さめ"> 合計小さめ</label>
-      <label><input type="checkbox" class="feature" value="合計大きめ"> 合計大きめ</label>
-      <label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label>
-    </div>
     <button onclick="filterResults()">🔍 検索</button>
   </div>
 
@@ -119,7 +87,6 @@
 
   <button class="scroll-button" id="scrollTopBtn" onclick="scrollTableToTop()">⬆ 最上段へ</button>
   <button class="scroll-button" id="scrollBottomBtn" onclick="scrollTableToBottom()">⬇ 最下段へ</button>
-  <div id="popupBox" class="popup"></div>
 
   <script>
     let data = [];
@@ -134,8 +101,7 @@
       if (value === "" || value === null || value === undefined) return "0円";
       if (isNaN(value)) return "-";
       const intVal = parseInt(value);
-      if (isNaN(intVal)) return value;
-      return intVal.toLocaleString() + "円";
+      return isNaN(intVal) ? value : intVal.toLocaleString() + "円";
     }
 
     function renderTable(filteredData) {
@@ -147,13 +113,13 @@
         const row = `
           <tr>
             <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${bonus}</td><td>${item["特徴"] || ""}</td>
-            <td title="${formatYen(item["1等賞金"])}">${formatYen(item["1等賞金"])}</td>
-            <td>${item["1等口数"]}</td><td title="${formatYen(item["2等賞金"])}">${formatYen(item["2等賞金"])}</td>
-            <td>${item["2等口数"]}</td><td title="${formatYen(item["3等賞金"])}">${formatYen(item["3等賞金"])}</td>
-            <td>${item["3等口数"]}</td><td title="${formatYen(item["4等賞金"])}">${formatYen(item["4等賞金"])}</td>
-            <td>${item["4等口数"]}</td><td title="${formatYen(item["5等賞金"])}">${formatYen(item["5等賞金"])}</td>
-            <td>${item["5等口数"]}</td><td title="${formatYen(item["6等賞金"])}">${formatYen(item["6等賞金"])}</td>
-            <td>${item["6等口数"]}</td><td title="${formatYen(item["キャリーオーバー"])}">${formatYen(item["キャリーオーバー"])}</td>
+            <td>${formatYen(item["1等賞金"])}</td><td>${item["1等口数"]}</td>
+            <td>${formatYen(item["2等賞金"])}</td><td>${item["2等口数"]}</td>
+            <td>${formatYen(item["3等賞金"])}</td><td>${item["3等口数"]}</td>
+            <td>${formatYen(item["4等賞金"])}</td><td>${item["4等口数"]}</td>
+            <td>${formatYen(item["5等賞金"])}</td><td>${item["5等口数"]}</td>
+            <td>${formatYen(item["6等賞金"])}</td><td>${item["6等口数"]}</td>
+            <td>${formatYen(item["キャリーオーバー"])}</td>
           </tr>`;
         tbody.insertAdjacentHTML("beforeend", row);
       });
@@ -164,15 +130,13 @@
       const toRound = parseInt(document.getElementById("toRound").value) || 9999;
       const fromDate = document.getElementById("fromDate").value;
       const toDate = document.getElementById("toDate").value;
-      const checked = Array.from(document.querySelectorAll(".feature:checked")).map(el => el.value);
 
       const filtered = data.filter(item => {
         const round = parseInt(item["開催回"]);
         const date = item["日付"];
         const inRound = round >= fromRound && round <= toRound;
         const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
-        const hasFeature = checked.length === 0 || checked.every(f => item["特徴"]?.includes(f));
-        return inRound && inDate && hasFeature;
+        return inRound && inDate;
       });
 
       renderTable(filtered);
