--- a/index.html
+++ b/index.html
@@ -90,15 +90,28 @@
     <label>To: <input type="number" id="toRound" min="1"></label>
     <label>開催日 From: <input type="date" id="fromDate"></label>
     <label>To: <input type="date" id="toDate"></label>
+    
     <div>
-      <label><input type="checkbox" class="feature" value="連番"> 連番</label>
+      <label><input type="checkbox" class="feature" value="連番あり"> 連番あり</label>
+      <span class="info-icon" onclick="showPopup(event, '連続した数字（例：24・25など）を含む構成です。')">ⓘ</span>
       <label><input type="checkbox" class="feature" value="奇数多め"> 奇数多め</label>
+      <span class="info-icon" onclick="showPopup(event, '奇数が5個以上含まれる構成です。')">ⓘ</span>
       <label><input type="checkbox" class="feature" value="偶数多め"> 偶数多め</label>
-      <label><input type="checkbox" class="feature" value="バランス型"> バランス型</label>
+      <span class="info-icon" onclick="showPopup(event, '偶数が5個以上含まれる構成です。')">ⓘ</span>
       <label><input type="checkbox" class="feature" value="下一桁かぶり"> 下一桁かぶり</label>
+      <span class="info-icon" onclick="showPopup(event, '同じ下一桁の数字が2個以上（例：11・21など）含まれる構成です。')">ⓘ</span>
       <label><input type="checkbox" class="feature" value="合計小さめ"> 合計小さめ</label>
+      <span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が160未満の回です。')">ⓘ</span>
       <label><input type="checkbox" class="feature" value="合計大きめ"> 合計大きめ</label>
+      <span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が220を超える回です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="10番台集中"> 10番台集中</label>
+      <span class="info-icon" onclick="showPopup(event, '10〜19の数字が3つ以上含まれる構成です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="30番台多め"> 30番台多め</label>
+      <span class="info-icon" onclick="showPopup(event, '30〜37の数字が3つ以上含まれる構成です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="高低ミックス"> 高低ミックス</label>
+      <span class="info-icon" onclick="showPopup(event, '10未満と30超の数字が両方含まれる構成です。')">ⓘ</span>
       <label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label>
+      <span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
     </div>
     <button onclick="filterResults()">🔍 検索</button>
   </div>
