--- a/index.html
+++ b/index.html
@@ -132,77 +132,27 @@
 
   <button class="scroll-button" id="scrollTopBtn" onclick="scrollTableToTop()">⬆ 最上段へ</button>
   <button class="scroll-button" id="scrollBottomBtn" onclick="scrollTableToBottom()">⬇ 最下段へ</button>
-  <div id="popupBox" class="popup"></div>
-
+  
+  <div id="popupBox" class="popup" style="display:none; position:absolute;"></div>
   <script>
-    let data = [];
-
-    async function loadData() {
-      const res = await fetch("loto7.json");
-      data = await res.json();
-      renderTable(data);
+    function showPopup(event, text) {
+      const popup = document.getElementById("popupBox");
+      popup.textContent = text;
+      popup.style.display = "block";
+      popup.style.left = (event.pageX + 10) + "px";
+      popup.style.top = (event.pageY + 10) + "px";
     }
 
-    function formatYen(value) {
-      if (value === "" || value === null || value === undefined) return "0円";
-      if (isNaN(value)) return "-";
-      const intVal = parseInt(value);
-      if (isNaN(intVal)) return value;
-      return intVal.toLocaleString() + "円";
+    function hidePopup() {
+      document.getElementById("popupBox").style.display = "none";
     }
 
-    function renderTable(filteredData) {
-      const tbody = document.querySelector("#resultTable tbody");
-      tbody.innerHTML = "";
-      filteredData.forEach(item => {
-        const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"], item["第6数字"], item["第7数字"]].join("・");
-        const bonus = [item["BONUS数字1"], item["BONUS数字2"]].join("・");
-        const row = `
-          <tr>
-            <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${bonus}</td><td>${item["特徴"] || ""}</td>
-            <td title="${formatYen(item["1等賞金"])}">${formatYen(item["1等賞金"])}</td>
-            <td>${item["1等口数"]}</td><td title="${formatYen(item["2等賞金"])}">${formatYen(item["2等賞金"])}</td>
-            <td>${item["2等口数"]}</td><td title="${formatYen(item["3等賞金"])}">${formatYen(item["3等賞金"])}</td>
-            <td>${item["3等口数"]}</td><td title="${formatYen(item["4等賞金"])}">${formatYen(item["4等賞金"])}</td>
-            <td>${item["4等口数"]}</td><td title="${formatYen(item["5等賞金"])}">${formatYen(item["5等賞金"])}</td>
-            <td>${item["5等口数"]}</td><td title="${formatYen(item["6等賞金"])}">${formatYen(item["6等賞金"])}</td>
-            <td>${item["6等口数"]}</td><td title="${formatYen(item["キャリーオーバー"])}">${formatYen(item["キャリーオーバー"])}</td>
-          </tr>`;
-        tbody.insertAdjacentHTML("beforeend", row);
-      });
-    }
-
-    function filterResults() {
-      const fromRound = parseInt(document.getElementById("fromRound").value) || 1;
-      const toRound = parseInt(document.getElementById("toRound").value) || 9999;
-      const fromDate = document.getElementById("fromDate").value;
-      const toDate = document.getElementById("toDate").value;
-      const checked = Array.from(document.querySelectorAll(".feature:checked")).map(el => el.value);
-
-      const filtered = data.filter(item => {
-        const round = parseInt(item["開催回"]);
-        const date = item["日付"];
-        const inRound = round >= fromRound && round <= toRound;
-        const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
-        const hasFeature = checked.length === 0 || checked.every(f => item["特徴"]?.includes(f));
-        return inRound && inDate && hasFeature;
-      });
-
-      renderTable(filtered);
-    }
-
-    function scrollTableToTop() {
-      document.getElementById("scrollContainer").scrollTo({ top: 0, behavior: "smooth" });
-    }
-
-    function scrollTableToBottom() {
-      const container = document.getElementById("scrollContainer");
-      container.scrollTo({ top: container.scrollHeight, behavior: "smooth" });
-    }
-
-    document.addEventListener("DOMContentLoaded", () => {
-      loadData();
+    document.addEventListener("click", function(e) {
+      if (!e.target.classList.contains("info-icon")) {
+        hidePopup();
+      }
     });
   </script>
+
 </body>
 </html>
