--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
       z-index: 2;
     }
 
+
+  .filters button {
+    background: #e46c6c;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    padding: 6px 12px;
+    cursor: pointer;
+  }
+
 </style>
 </head>
 <body>
@@ -127,7 +137,7 @@
       <label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label>
       <span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
     </div>
-    <button onclick="filterResults()">🔍 検索</button>
+    <button class="filters-button" onclick="filterResults()">🔍 検索</button>
   </div>
 
   <div class="scroll-container" id="scrollContainer">
