--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
     cursor: pointer;
   }
 
+
+  .filters button {
+    background: #e46c6c;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    padding: 6px 12px;
+    font-size: 14px;
+    cursor: pointer;
+  }
+
 </style>
 </head>
 <body>
