--- a/index.html
+++ b/index.html
@@ -109,14 +109,16 @@
   }
 
 
-  .search-button {
-    background: #e46c6c;
-    color: #fff;
+  
+
+
+  button {
+    background: #ff8888;
+    color: white;
     border: none;
-    border-radius: 6px;
+    border-radius: 5px;
     padding: 6px 12px;
     font-size: 14px;
-    cursor: pointer;
   }
 
 </style>
@@ -159,7 +161,7 @@
       <label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label>
       <span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
     </div>
-    <button class="search-button" onclick="filterResults()">🔍 検索</button>
+    <button onclick="filterResults()">🔍 検索</button>
   </div>
 
   <div class="scroll-container" id="scrollContainer">
