--- a/index.html
+++ b/index.html
@@ -46,17 +46,16 @@
       z-index: 1;
     }
     .scroll-button {
-      position: fixed;
-      right: 10px;
-      padding: 8px 12px;
-      font-size: 13px;
-      background: #ff8888;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      opacity: 0.9;
-    }
+    background: #ff8888;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 16px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
+    cursor: pointer;
+  }
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
 
@@ -89,22 +88,27 @@
 
 
   .filters button {
-    background: #e46c6c;
-    color: #fff;
+    background: #ff8888;
+    color: white;
     border: none;
-    border-radius: 6px;
-    padding: 6px 12px;
+    border-radius: 8px;
+    padding: 8px 16px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
     cursor: pointer;
   }
 
 
   .filters button {
-    background: #e46c6c;
-    color: #fff;
+    background: #ff8888;
+    color: white;
     border: none;
-    border-radius: 6px;
-    padding: 6px 12px;
-    font-size: 14px;
+    border-radius: 8px;
+    padding: 8px 16px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
     cursor: pointer;
   }
 
@@ -116,9 +120,12 @@
     background: #ff8888;
     color: white;
     border: none;
-    border-radius: 5px;
-    padding: 6px 12px;
-    font-size: 14px;
+    border-radius: 8px;
+    padding: 8px 16px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
+    cursor: pointer;
   }
 
 </style>
