--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ロト7結果検索ツール</title>
+  <title>ロト6結果検索ツール</title>
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -11,9 +11,7 @@
       background-color: #fff6f0;
       color: #222;
     }
-    h1 {
-      color: #d94f4f;
-    }
+    h1 { color: #d94f4f; }
     .filters {
       background: #ffecec;
       border: 1px solid #ffd4d4;
@@ -26,12 +24,12 @@
       border: 1px solid #ffd4d4;
       border-radius: 8px;
       max-height: 600px;
-      overflow-y: auto;
+      overflow-x: auto;
     }
     table {
       border-collapse: collapse;
       width: 100%;
-      min-width: 800px;
+      min-width: 1000px;
     }
     th, td {
       border: 1px solid #ffc0c0;
@@ -46,27 +44,25 @@
       z-index: 1;
     }
     .scroll-button {
-      background: #ff8888;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 8px 16px;
-      font-size: 16px;
-      font-weight: bold;
-      font-family: "Helvetica Neue", sans-serif;
-      cursor: pointer;
-    }
+    background-color: #ff8888;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
+    border: none;
+    border-radius: 12px;
+    padding: 8px 20px;
+    cursor: pointer;
+  }
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
-
     .info-icon {
       display: inline-block;
-      margin-left: 6px;
+      font-size: 13px;
+      margin-left: 4px;
       cursor: pointer;
-      font-size: 14px;
-      color: #e26580;
+      color: #d94f4f;
     }
-
     .popup {
       display: none;
       position: absolute;
@@ -74,11 +70,24 @@
       border: 1px solid #e26580;
       padding: 6px;
       font-size: 13px;
-      max-width: 220px;
+      max-width: 240px;
       box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
       z-index: 999;
     }
-
+    @media screen and (max-width: 600px) {
+      .filters label {
+        display: block;
+        margin-bottom: 8px;
+      }
+      table {
+        font-size: 13px;
+      }
+      td:nth-child(3),
+      td:nth-child(5) {
+        font-size: 13px;
+      }
+    }
+  
     td:first-child, th:first-child {
       position: sticky;
       left: 0;
@@ -86,70 +95,139 @@
       z-index: 2;
     }
 
-    .filters button {
-      background: #ff8888;
-      color: white;
-      border: none;
-      border-radius: 12px;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      font-family: "Helvetica Neue", sans-serif;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-  </style>
+</style>
 </head>
 <body>
-  <h1>ロト7結果検索ツール</h1>
+  <h1>ロト6結果検索ツール</h1>
+
   <nav style="margin-bottom: 16px;">
-    <a href="https://po-3.github.io/loto6-data/" style="margin-right: 12px;">🔗 ロト6</a>
+    <a href="https://po-3.github.io/loto7-data/" style="margin-right: 12px;">🔗 ロト7</a>
     <a href="https://po-3.github.io/miniloto-data/">🔗 ミニロト</a>
   </nav>
-  <p>開催回・日付・抽選数字の特徴などで直感的に検索できます。</p>
-  <div class="filters" style="display: flex; flex-direction: column; flex-wrap: wrap;">
+
+  <p>開催回・日付・抽選数字の特徴などで検索できます。</p>
+
+  <div class="filters">
     <label>開催回 From: <input type="number" id="fromRound" min="1"></label>
     <label>To: <input type="number" id="toRound" min="1"></label>
     <label>開催日 From: <input type="date" id="fromDate"></label>
     <label>To: <input type="date" id="toDate"></label>
-    
-<div style="display: flex; flex-wrap: wrap; gap: 8px;">
-  <label><input type="checkbox" class="feature" value="連番あり"> 連番あり</label>
-  <span class="info-icon" onclick="showPopup(event, '連続した数字（例：24・25など）を含む構成です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="奇数多め"> 奇数多め</label>
-  <span class="info-icon" onclick="showPopup(event, '奇数が5個以上含まれる構成です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="偶数多め"> 偶数多め</label>
-  <span class="info-icon" onclick="showPopup(event, '偶数が5個以上含まれる構成です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="下一桁かぶり"> 下一桁かぶり</label>
-  <span class="info-icon" onclick="showPopup(event, '同じ下一桁の数字が2個以上（例：11・21など）含まれる構成です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="合計小さめ"> 合計小さめ</label>
-  <span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が160未満の回です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="合計大きめ"> 合計大きめ</label>
-  <span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が220を超える回です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="10番台集中"> 10番台集中</label>
-  <span class="info-icon" onclick="showPopup(event, '10〜19の数字が3つ以上含まれる構成です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="30番台多め"> 30番台多め</label>
-  <span class="info-icon" onclick="showPopup(event, '30〜37の数字が3つ以上含まれる構成です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="高低ミックス"> 高低ミックス</label>
-  <span class="info-icon" onclick="showPopup(event, '10未満と30超の数字が両方含まれる構成です。')">ⓘ</span>
-
-  <label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label>
-  <span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
-</div>
-
-    <button onclick="filterResults()">🔍 検索</button>
+    <div style="display: flex; flex-wrap: wrap; gap: 8px;">
+      <label><input type="checkbox" class="feature" value="連番あり"> 連番あり</label><span class="info-icon" onclick="showPopup(event, '連続した数字（例：24・25など）を含む構成です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="奇数多め"> 奇数多め</label><span class="info-icon" onclick="showPopup(event, '奇数が4個以上含まれる構成です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="偶数多め"> 偶数多め</label><span class="info-icon" onclick="showPopup(event, '偶数が4個以上含まれる構成です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="下一桁かぶり"> 下一桁かぶり</label><span class="info-icon" onclick="showPopup(event, '同じ下一桁（例：11・21・31など）が複数含まれる構成です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="合計小さめ"> 合計小さめ</label><span class="info-icon" onclick="showPopup(event, '6つの本数字の合計が114未満の回です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="合計大きめ"> 合計大きめ</label><span class="info-icon" onclick="showPopup(event, '6つの本数字の合計が151を超える回です。')">ⓘ</span>
+      <label><input type="checkbox" class="feature" value="キャリーあり"> キャリーあり</label><span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
+    </div>
+    <button onclick="filterResults()" style="background: #e46c6c; color: #fff; border: none; border-radius: 6px; padding: 6px 12px;">検索</button>
   </div>
+
+  <div class="scroll-container" id="scrollContainer">
+    <table id="resultTable">
+      <thead>
+        <tr>
+          <th>開催回</th><th>日付</th><th>本数字</th><th>ボーナス</th><th>特徴</th>
+          <th>1等賞金</th><th>1等口数</th><th>2等賞金</th><th>2等口数</th>
+          <th>3等賞金</th><th>3等口数</th><th>4等賞金</th><th>4等口数</th>
+          <th>5等賞金</th><th>5等口数</th><th>キャリーオーバー</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <button class="scroll-button" id="scrollTopBtn" onclick="scrollTableToTop()">⬆ 最上段へ</button>
+  <button class="scroll-button" id="scrollBottomBtn" onclick="scrollTableToBottom()">⬇ 最下段へ</button>
+  <div id="popupBox" class="popup"></div>
+
+
+<script>
+  let data = [];
+
+  function formatYen(value) {
+    if (!value) return "0円";
+    if (isNaN(value)) return "-";
+    const intVal = parseInt(value);
+    return isNaN(intVal) ? value : intVal.toLocaleString() + "円";
+  }
+
+  async function loadData() {
+    try {
+      const res = await fetch("./loto6.json");
+      data = await res.json();
+      renderTable(data);
+    } catch (e) {
+      console.error("データ読み込み失敗:", e);
+    }
+  }
+
+  function renderTable(filteredData) {
+    const tbody = document.querySelector("#resultTable tbody");
+    tbody.innerHTML = "";
+    filteredData.forEach(item => {
+      const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"], item["第6数字"]].join("・");
+      const row = `
+        <tr>
+          <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${item["ボーナス数字"]}</td><td>${item["特徴"] || ""}</td>
+          <td>${formatYen(item["1等賞金"])}</td><td>${item["1等口数"]}</td>
+          <td>${formatYen(item["2等賞金"])}</td><td>${item["2等口数"]}</td>
+          <td>${formatYen(item["3等賞金"])}</td><td>${item["3等口数"]}</td>
+          <td>${formatYen(item["4等賞金"])}</td><td>${item["4等口数"]}</td>
+          <td>${formatYen(item["5等賞金"])}</td><td>${item["5等口数"]}</td>
+          <td>${formatYen(item["キャリーオーバー"])}</td>
+        </tr>`;
+      tbody.insertAdjacentHTML("beforeend", row);
+    });
+  }
+
+  function filterResults() {
+    const fromRound = parseInt(document.getElementById("fromRound").value) || 1;
+    const toRound = parseInt(document.getElementById("toRound").value) || 9999;
+    const fromDate = document.getElementById("fromDate").value;
+    const toDate = document.getElementById("toDate").value;
+    const checked = Array.from(document.querySelectorAll(".feature:checked")).map(el => el.value);
+    const filtered = data.filter(item => {
+      const round = parseInt(item["開催回"]);
+      const date = item["日付"];
+      const inRound = round >= fromRound && round <= toRound;
+      const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
+      const hasFeature = checked.length === 0 || checked.every(f => item["特徴"]?.includes(f));
+      return inRound && inDate && hasFeature;
+    });
+    renderTable(filtered);
+  }
+
+  function showPopup(event, text) {
+    const popup = document.getElementById("popupBox");
+    popup.textContent = text;
+    popup.style.display = "block";
+    popup.style.left = (event.pageX + 10) + "px";
+    popup.style.top = (event.pageY + 10) + "px";
+  }
+
+  function hidePopup() {
+    document.getElementById("popupBox").style.display = "none";
+  }
+
+  document.addEventListener("click", function(e) {
+    if (!e.target.classList.contains("info-icon")) hidePopup();
+  });
+
+  function scrollTableToTop() {
+    document.getElementById("scrollContainer").scrollTo({ top: 0, behavior: "smooth" });
+  }
+
+  function scrollTableToBottom() {
+    const container = document.getElementById("scrollContainer");
+    container.scrollTo({ top: container.scrollHeight, behavior: "smooth" });
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    loadData();
+  });
+</script>
 </body>
+
 </html>
