--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
 
+    button {
+    background: #ff8888;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 16px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
+    cursor: pointer;
+  }
+    button:hover {
+      background-color: #cc6666;
+    
+    #scrollTopBtn { bottom: 70px; }
+    #scrollBottomBtn { bottom: 20px; }
+
     .info-icon {
       display: inline-block;
       margin-left: 6px;
