--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <th>開催回</th><th>日付</th><th>本数字</th><th>ボーナス</th><th>特徴</th>
           <th>1等賞金</th><th>1等口数</th><th>2等賞金</th><th>2等口数</th>
           <th>3等賞金</th><th>3等口数</th><th>4等賞金</th><th>4等口数</th>
-          <th>5等賞金</th><th>5等口数</th><th>6等賞金</th><th>6等口数</th><th>6等賞金</th><th>6等口数</th><th>キャリーオーバー</th>
+          <th>5等賞金</th><th>5等口数</th><th>6等賞金</th><th>6等口数</th><th>キャリーオーバー</th>
         </tr>
       </thead>
       <tbody></tbody>
