--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
       box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
       z-index: 999;
     }
-  </style>
+  
+    td:first-child, th:first-child {
+      position: sticky;
+      left: 0;
+      background: #fff0f0;
+      z-index: 2;
+    }
+
+</style>
 </head>
 <body>
   <h1>ロト7結果検索ツール</h1>
