--- a/index.html
+++ b/index.html
@@ -46,17 +46,20 @@
       z-index: 1;
     }
     .scroll-button {
-      position: fixed;
-      right: 10px;
-      padding: 8px 12px;
-      font-size: 13px;
-      background: #ff8888;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      opacity: 0.9;
-    }
+    background: #ff8888;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
+    border: none;
+    border-radius: 12px;
+    padding: 10px 24px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+  }
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
 
