--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 </style>
 </head>
 <body>
+
+  <nav style="margin-bottom: 16px;">
+    <a href="https://po-3.github.io/loto6-data/" style="margin-right: 12px;">🔗 ロト6</a>
+    <a href="https://po-3.github.io/miniloto-data/">🔗 ミニロト</a>
+  </nav>
+
   <h1>ロト7結果検索ツール</h1>
   <p>開催回・日付・抽選数字の特徴などで直感的に検索できます。</p>
 
