--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
+
+    th:nth-child(5),
+    td:nth-child(5) {
+      font-size: 14px;
+    }
+
 </style>
 </head>
 <body>
