--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
+
+    th:nth-child(5),
+    td:nth-child(5) {
+      font-size: 14px;
+    }
+
 </style>
 </head>
 <body>
@@ -137,7 +143,7 @@
 <label><input class="feature" type="checkbox" value="合計小さめ"/> 合計小さめ</label>
 <span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が160未満の回です。')">ⓘ</span>
 <label><input class="feature" type="checkbox" value="合計大きめ"/> 合計大きめ</label>
-<span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が200を超える回です。')">ⓘ</span>
+<span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が160以上の回です。')">ⓘ</span>
 <label><input class="feature" type="checkbox" value="10番台集中"/> 10番台集中</label>
 <span class="info-icon" onclick="showPopup(event, '10〜19の数字が3つ以上含まれる構成です。')">ⓘ</span>
 <label><input class="feature" type="checkbox" value="30番台多め"/> 30番台多め</label>
