--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
       font-size: 14px;
     }
 
+
+    th:nth-child(5),
+    td:nth-child(5) {
+      font-size: 14px !important;
+    }
+
 </style>
 </head>
 <body>
