--- a/index.html
+++ b/index.html
@@ -115,9 +115,19 @@
     
 
 
+    
+
+
     td:nth-child(5) {
-      font-size: 14px !important;
+      font-size: 14px;
     }
+
+
+@media screen and (max-width: 768px) {
+  td:nth-child(5) {
+    font-size: 14px !important;
+  }
+}
 
 </style>
 </head>
