--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 <body>
 
 <h1>ロト7結果検索ツール</h1>
+<p id="lastUpdated" style="font-size: 13px; color: #666; margin-top: -12px; margin-bottom: 16px;"></p>
 
 <nav style="margin-bottom: 16px;">
   <a href="https://po-3.github.io/loto6-data/" style="margin-right: 12px;">🔗 ロト6</a>
@@ -221,6 +222,11 @@
     const res = await fetch("./loto7.json");
     data = await res.json();
     renderTable(data);
+
+      const dates = data.map(item => item["日付"]).sort();
+      const latest = dates[dates.length - 1];
+      document.getElementById("lastUpdated").textContent = `最終更新日：${latest}`;
+
   }
 
   function renderTable(filteredData) {
@@ -285,6 +291,11 @@
     document.querySelectorAll(".feature").forEach(cb => cb.checked = false);
     document.getElementById("resultCount").textContent = "";
     renderTable(data);
+
+      const dates = data.map(item => item["日付"]).sort();
+      const latest = dates[dates.length - 1];
+      document.getElementById("lastUpdated").textContent = `最終更新日：${latest}`;
+
   }
 
 </script>
